--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -243,9 +243,13 @@
         "sunday": "Dimanche"
       },
       "activityDays": "Jours d'activité",
-      "timeRange": "Plage horaire",
       "startTime": "Heure de début",
       "endTime": "Heure de fin",
+      "fields": {
+        "postalCode": "Code Postal",
+        "phoneNumber": "Numéro de Téléphone",
+        "lastName": "Nom de famille"
+      },
       "operators": {
         "equals": "est égal à",
         "startsWith": "commence par",
