feat: Localize "N/A" and "Unknown" in reports
This commit introduces localization for the terms "N/A" and "Unknown" within the reporting sections of the application. Previously, these terms were hardcoded. By using the i18n system, the application now supports these terms in different languages, improving internationalization.

The `findEntityName` helper function has been refactored to leverage the new translated terms and has been moved to the `ReportingDashboard` and `CampaignDetailView` components where it is used, ensuring better encapsulation and reusability within those contexts.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -22,7 +22,9 @@
     "all": "All",
     "none": "None",
     "previous": "Previous",
-    "next": "Next"
+    "next": "Next",
+    "notAvailable": "N/A",
+    "unknown": "Unknown"
   },
   "alerts": {
     "appDataLoadError": "Could not load application data.",
@@ -581,6 +583,9 @@
       "history": "Call History"
     },
     "charts": {
+      "treemapTitle": "Hierarchical Distribution",
+      "resetFilter": "Reset filter",
+      "successByHourTitle": "Success Hours (Conversions)",
       "dailyVolumeTitle": "Daily call volume",
       "callCountLabel": "Number of calls",
       "callsByCampaignTitle": "Call distribution by campaign",
@@ -647,7 +652,8 @@
       "value": "Value",
       "timesheetKpis": "Timesheet Indicators",
       "detailedAnalysis": "Detailed Analyses",
-      "detailedLogs": "Detailed Logs"
+      "detailedLogs": "Detailed Logs",
+      "filename": "analytics_report"
     }
   },
   "systemSettings": {
