--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -22,9 +22,7 @@
     "all": "Tous",
     "none": "Aucun",
     "previous": "Précédent",
-    "next": "Suivant",
-    "notAvailable": "N/D",
-    "unknown": "Inconnu"
+    "next": "Suivant"
   },
   "alerts": {
     "appDataLoadError": "Impossible de charger les données de l'application.",
@@ -41,7 +39,7 @@
     "usersImported": "{count} utilisateurs importés avec succès.",
     "contactImportError": "Erreur lors de l'importation des contacts.",
     "passwordUpdateSuccess": "Mot de passe mis à jour avec succès.",
-    "profilePictureUpdateSuccess": "Photo de profil mis à jour.",
+    "profilePictureUpdateSuccess": "Photo de profil mise à jour.",
     "updateError": "Échec de la mise à jour."
   },
   "header": {
@@ -245,13 +243,9 @@
         "sunday": "Dimanche"
       },
       "activityDays": "Jours d'activité",
+      "timeRange": "Plage horaire",
       "startTime": "Heure de début",
       "endTime": "Heure de fin",
-      "fields": {
-        "postalCode": "Code Postal",
-        "phoneNumber": "Numéro de Téléphone",
-        "lastName": "Nom de famille"
-      },
       "operators": {
         "equals": "est égal à",
         "startsWith": "commence par",
@@ -583,9 +577,6 @@
       "history": "Historique des Appels"
     },
     "charts": {
-      "treemapTitle": "Distribution hiérarchique",
-      "resetFilter": "Réinitialiser le filtre",
-      "successByHourTitle": "Heures de Succès (Conversions)",
       "dailyVolumeTitle": "Volume d'appels par jour",
       "callCountLabel": "Nombre d'appels",
       "callsByCampaignTitle": "Répartition des appels par campagne",
@@ -652,8 +643,7 @@
       "value": "Valeur",
       "timesheetKpis": "Indicateurs de Temps de Présence",
       "detailedAnalysis": "Analyses Détaillées",
-      "detailedLogs": "Journaux Détaillés",
-      "filename": "rapport_analytique"
+      "detailedLogs": "Journaux Détaillés"
     }
   },
   "systemSettings": {
