feat: Add recurring event functionality
This commit introduces support for recurring events in the planning module. It includes:

- Updates to the `PlanningEvent` type to include `isRecurring`, `recurringDays`, and `recurrenceEndDate` fields.
- Enhancements to the `PlanningEventModal` to allow users to configure recurring event settings.
- New internationalization keys for recurring event options in both English and French.
- A reusable `ToggleSwitch` component.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,3 +1,4 @@
+
 {
   "common": {
     "loading": "Loading",
@@ -723,7 +724,10 @@
       "selectActivity": "Select an activity",
       "start": "Start",
       "end": "End",
-      "validationError": "Please select a target (agent/group) and an activity."
+      "validationError": "Please select a target (agent/group) and an activity.",
+      "recurringEvent": "Recurring event",
+      "repeatOn": "Repeat on",
+      "recurrenceEnd": "Recurrence end"
     }
   },
   "weekdays": {
@@ -733,7 +737,16 @@
     "thursday": "Thursday",
     "friday": "Friday",
     "saturday": "Saturday",
-    "sunday": "Sunday"
+    "sunday": "Sunday",
+    "short": {
+        "monday": "M",
+        "tuesday": "T",
+        "wednesday": "W",
+        "thursday": "T",
+        "friday": "F",
+        "saturday": "S",
+        "sunday": "S"
+    }
   },
   "features": {
     "users": {
