feat(planning): Add functionality to clear all planning events
Introduces a new feature to delete all planning events across all users in a single operation. This includes a dedicated backend endpoint, database query, and frontend UI elements with confirmation dialogs and internationalized messages. This action is restricted to users with 'Administrateur' or 'SuperAdmin' roles.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -743,7 +743,11 @@
         "massEdit": "Mass Edit",
         "massDelete": "Mass Delete",
         "confirmDelete": "Are you sure you want to delete {eventCount} event(s) for the {userCount} selected user(s) this week?"
-    }
+    },
+    "clearAllButton": "Clear Schedule",
+    "clearAllConfirm": "Are you sure you want to PERMANENTLY delete all schedule events for ALL users? This action is irreversible.",
+    "clearAllSuccess": "The schedule has been completely cleared.",
+    "clearAllError": "An error occurred while clearing the schedule."
   },
   "weekdays": {
     "monday": "Monday",
